# Geant4_dose-spectrum

./: CMakeLists.txt  LICENSE  README.md  g4decay.cc  run1.mac  run2.mac  vis.mac  vis2.mac
include/: action.hh  construction.hh  construction.hh.bk  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
src/: action.cc  construction.cc  construction.cc.bk  detector.cc  event.cc  generator.cc  generator.cc.bk  physics.cc  run.cc  stepping.cc
